// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReferenceDiffInterface > should render 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center __ReferenceDiffInterface__ css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-row ant-row-center mv3 css-dev-only-do-not-override-mncuj7"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 16px; padding-right: 16px;"
        >
          <div
            class="__ContentBox__ h-100 md-pb3"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2 md-pb3"
                >
                  <div>
                    <div
                      class="ant-row css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
                      />
                    </div>
                    <h2>
                      <span
                        data-test-id="literature-detail-title"
                      >
                        <span
                          class="__Latex__"
                        >
                          Title
                        </span>
                      </span>
                    </h2>
                    <div>
                      <div
                        class="__InlineList__ di"
                        data-testid="inline-data-list"
                      >
                        <ul>
                          <li>
                            <a
                              href="/literature?q=collaboration:CMS"
                            >
                              CMS
                            </a>
                          </li>
                        </ul>
                        <span>
                           Collaboration
                        </span>
                      </div>
                      <span>
                         and 
                      </span>
                      <div
                        class="__InlineList__ di"
                        data-testid="inline-data-list"
                      >
                        <ul>
                          <li>
                            <a
                              href="/literature?q=collaboration:CMS"
                            >
                              CMS
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <span>
                      2022-01-01
                    </span>
                    <div
                      class="mt3"
                    />
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  >
                    <span
                      class="__UserAction__"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        type="button"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="export"
                              class="anticon anticon-export"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="export"
                                fill="currentColor"
                                fill-rule="evenodd"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 912H144c-17.7 0-32-14.3-32-32V144c0-17.7 14.3-32 32-32h360c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8H184v656h656V520c0-4.4 3.6-8 8-8h56c4.4 0 8 3.6 8 8v360c0 17.7-14.3 32-32 32zM770.87 199.13l-52.2-52.2a8.01 8.01 0 014.7-13.6l179.4-21c5.1-.6 9.5 3.7 8.9 8.9l-21 179.4c-.8 6.6-8.9 9.4-13.6 4.7l-52.4-52.4-256.2 256.2a8.03 8.03 0 01-11.3 0l-42.4-42.4a8.03 8.03 0 010-11.3l256.1-256.3z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            cite
                          </span>
                        </span>
                      </button>
                    </span>
                    <span
                      class="__UserAction__"
                    >
                      <button
                        aria-describedby="test-id"
                        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
                        data-test-id="btn-claiming-login"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="file-done"
                              class="anticon anticon-file-done"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="file-done"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm376 116c-119.3 0-216 96.7-216 216s96.7 216 216 216 216-96.7 216-216-96.7-216-216-216zm107.5 323.5C750.8 868.2 712.6 884 672 884s-78.8-15.8-107.5-44.5C535.8 810.8 520 772.6 520 732s15.8-78.8 44.5-107.5C593.2 595.8 631.4 580 672 580s78.8 15.8 107.5 44.5C808.2 653.2 824 691.4 824 732s-15.8 78.8-44.5 107.5zM761 656h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-23.1-31.9a7.92 7.92 0 00-6.5-3.3H573c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.9-5.3.1-12.7-6.4-12.7zM440 852H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            claim
                          </span>
                        </span>
                      </button>
                    </span>
                  </div>
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  >
                    <span
                      class="__UserAction__"
                    >
                      <a
                        data-test-id="reference-search-button"
                        href="/literature?q=citedby:recid:123456"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="file-search"
                              class="anticon anticon-file-search"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="file-search"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            reference search
                          </span>
                        </span>
                      </a>
                    </span>
                    <span
                      class="__UserAction__"
                    >
                      <a
                        href="/literature?q=refersto:recid:123456"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="login"
                              class="anticon anticon-login"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="login"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <defs>
                                  <style />
                                </defs>
                                <path
                                  d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 01520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 01270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 010 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            1 citation
                          </span>
                        </span>
                      </a>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-col-24 mt3 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="__ContentBox__ h-100"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2"
                >
                  <div>
                    <div
                      class="ant-card ant-card-bordered ant-card-small no-border css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-card-head"
                      >
                        <div
                          class="ant-card-head-wrapper"
                        >
                          <div
                            class="ant-card-head-title"
                          >
                            Reference 1 changed to
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-card-body"
                      >
                        <div
                          data-test-id="reference-item"
                        >
                          <li
                            class="ant-list-item"
                          >
                            <div
                              class="ant-row ant-row-start ant-row-middle w-100 flex-nowrap css-dev-only-do-not-override-mncuj7"
                              style="margin-left: -12px; margin-right: -12px;"
                              type="flex"
                            >
                              <div
                                class="ant-col ant-col-xs-2 ant-col-lg-1 css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px;"
                              >
                                <div
                                  class="flex"
                                >
                                  <span>
                                    [1]
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-col css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px; width: 100%;"
                              >
                                <div
                                  class="ant-list-item-meta"
                                >
                                  <div
                                    class="ant-list-item-meta-content"
                                  >
                                    <div
                                      class="ant-list-item-meta-description"
                                    >
                                      <div
                                        class="__InlineList__ di"
                                        data-testid="inline-data-list"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="di"
                                            >
                                              <span>
                                                Author2
                                              </span>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                      <div
                                        class="__InlineList__ secondary-container"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <ul>
                                                <li>
                                                  <span>
                                                    <span>
                                                      <i>
                                                        Journal2
                                                      </i>
                                                    </span>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                             • 
                                          </li>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <span
                                                class=""
                                              >
                                                DOI: 
                                              </span>
                                              <ul>
                                                <li>
                                                  <span>
                                                    <a
                                                      href="//doi.org/123456.12345"
                                                      target="_blank"
                                                    >
                                                      123456.12345
                                                    </a>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-col-24 mt3 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="__ContentBox__ h-100"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2"
                >
                  <div>
                    <div
                      class="ant-card ant-card-bordered ant-card-small no-border css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-card-head"
                      >
                        <div
                          class="ant-card-head-wrapper"
                        >
                          <div
                            class="ant-card-head-title"
                          >
                            Reference metadata
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-card-body"
                      >
                        <div
                          data-test-id="reference-item"
                        >
                          <li
                            class="ant-list-item"
                          >
                            <div
                              class="ant-row ant-row-start ant-row-middle w-100 flex-nowrap css-dev-only-do-not-override-mncuj7"
                              style="margin-left: -12px; margin-right: -12px;"
                              type="flex"
                            >
                              <div
                                class="ant-col ant-col-xs-2 ant-col-lg-1 css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px;"
                              >
                                <div
                                  class="flex"
                                >
                                  <span>
                                    [1]
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-col css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px; width: 100%;"
                              >
                                <div
                                  class="ant-list-item-meta"
                                >
                                  <div
                                    class="ant-list-item-meta-content"
                                  >
                                    <div
                                      class="ant-list-item-meta-description"
                                    >
                                      <div
                                        class="__InlineList__ di"
                                        data-testid="inline-data-list"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="di"
                                            >
                                              <span>
                                                Author
                                              </span>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                      <div
                                        class="__InlineList__ secondary-container"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <ul>
                                                <li>
                                                  <span>
                                                    <span>
                                                      <i>
                                                        Journal
                                                      </i>
                                                    </span>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                             • 
                                          </li>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <span
                                                class=""
                                              >
                                                DOI: 
                                              </span>
                                              <ul>
                                                <li>
                                                  <span>
                                                    <a
                                                      href="//doi.org/123456.12345"
                                                      target="_blank"
                                                    >
                                                      123456.12345
                                                    </a>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-card ant-card-bordered ant-card-small no-border css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-card-body"
                      >
                        <p
                          class="b mb0 mt4"
                        >
                          1) N. P.Armitage, E. J.Mele, and A.Vishwanath, Rev…. 90, 015001 (2018). 10.1103/RevModPhys.90.015001
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReferenceDiffInterface > should render with error 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center __ReferenceDiffInterface__ css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-row ant-row-center mv3 css-dev-only-do-not-override-mncuj7"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 16px; padding-right: 16px;"
        >
          <div
            class="__ContentBox__ h-100 md-pb3"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2 md-pb3"
                >
                  <div>
                    <div
                      class="ant-row css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
                      />
                    </div>
                    <h2>
                      <span
                        data-test-id="literature-detail-title"
                      >
                        <span
                          class="__Latex__"
                        >
                          Title
                        </span>
                      </span>
                    </h2>
                    <div>
                      <div
                        class="__InlineList__ di"
                        data-testid="inline-data-list"
                      >
                        <ul>
                          <li>
                            <a
                              href="/literature?q=collaboration:CMS"
                            >
                              CMS
                            </a>
                          </li>
                        </ul>
                        <span>
                           Collaboration
                        </span>
                      </div>
                      <span>
                         and 
                      </span>
                      <div
                        class="__InlineList__ di"
                        data-testid="inline-data-list"
                      >
                        <ul>
                          <li>
                            <a
                              href="/literature?q=collaboration:CMS"
                            >
                              CMS
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <span>
                      2022-01-01
                    </span>
                    <div
                      class="mt3"
                    />
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  >
                    <span
                      class="__UserAction__"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        type="button"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="export"
                              class="anticon anticon-export"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="export"
                                fill="currentColor"
                                fill-rule="evenodd"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 912H144c-17.7 0-32-14.3-32-32V144c0-17.7 14.3-32 32-32h360c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8H184v656h656V520c0-4.4 3.6-8 8-8h56c4.4 0 8 3.6 8 8v360c0 17.7-14.3 32-32 32zM770.87 199.13l-52.2-52.2a8.01 8.01 0 014.7-13.6l179.4-21c5.1-.6 9.5 3.7 8.9 8.9l-21 179.4c-.8 6.6-8.9 9.4-13.6 4.7l-52.4-52.4-256.2 256.2a8.03 8.03 0 01-11.3 0l-42.4-42.4a8.03 8.03 0 010-11.3l256.1-256.3z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            cite
                          </span>
                        </span>
                      </button>
                    </span>
                    <span
                      class="__UserAction__"
                    >
                      <button
                        aria-describedby="test-id"
                        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
                        data-test-id="btn-claiming-login"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="file-done"
                              class="anticon anticon-file-done"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="file-done"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm376 116c-119.3 0-216 96.7-216 216s96.7 216 216 216 216-96.7 216-216-96.7-216-216-216zm107.5 323.5C750.8 868.2 712.6 884 672 884s-78.8-15.8-107.5-44.5C535.8 810.8 520 772.6 520 732s15.8-78.8 44.5-107.5C593.2 595.8 631.4 580 672 580s78.8 15.8 107.5 44.5C808.2 653.2 824 691.4 824 732s-15.8 78.8-44.5 107.5zM761 656h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-23.1-31.9a7.92 7.92 0 00-6.5-3.3H573c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.9-5.3.1-12.7-6.4-12.7zM440 852H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            claim
                          </span>
                        </span>
                      </button>
                    </span>
                  </div>
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  >
                    <span
                      class="__UserAction__"
                    >
                      <a
                        data-test-id="reference-search-button"
                        href="/literature?q=citedby:recid:123456"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="file-search"
                              class="anticon anticon-file-search"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="file-search"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            reference search
                          </span>
                        </span>
                      </a>
                    </span>
                    <span
                      class="__UserAction__"
                    >
                      <a
                        href="/literature?q=refersto:recid:123456"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="login"
                              class="anticon anticon-login"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="login"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <defs>
                                  <style />
                                </defs>
                                <path
                                  d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 01520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 01270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 010 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            1 citation
                          </span>
                        </span>
                      </a>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row mb3 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-alert ant-alert-error css-dev-only-do-not-override-mncuj7"
            data-show="true"
            role="alert"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-alert-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                />
              </svg>
            </span>
            <div
              class="ant-alert-content"
            >
              <div
                class="ant-alert-message"
              >
                Error message
              </div>
            </div>
            <button
              class="ant-alert-close-icon"
              tabindex="0"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReferenceDiffInterface > should render without previous reference if it is unlinked 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center __ReferenceDiffInterface__ css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-row ant-row-center mv3 css-dev-only-do-not-override-mncuj7"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
          style="padding-left: 16px; padding-right: 16px;"
        >
          <div
            class="__ContentBox__ h-100 md-pb3"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2 md-pb3"
                >
                  <div>
                    <div
                      class="ant-row css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-col ant-col-24 css-dev-only-do-not-override-mncuj7"
                      />
                    </div>
                    <h2>
                      <span
                        data-test-id="literature-detail-title"
                      >
                        <span
                          class="__Latex__"
                        >
                          Title
                        </span>
                      </span>
                    </h2>
                    <div>
                      <div
                        class="__InlineList__ di"
                        data-testid="inline-data-list"
                      >
                        <ul>
                          <li>
                            <a
                              href="/literature?q=collaboration:CMS"
                            >
                              CMS
                            </a>
                          </li>
                        </ul>
                        <span>
                           Collaboration
                        </span>
                      </div>
                      <span>
                         and 
                      </span>
                      <div
                        class="__InlineList__ di"
                        data-testid="inline-data-list"
                      >
                        <ul>
                          <li>
                            <a
                              href="/literature?q=collaboration:CMS"
                            >
                              CMS
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <span>
                      2022-01-01
                    </span>
                    <div
                      class="mt3"
                    />
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  >
                    <span
                      class="__UserAction__"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        type="button"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="export"
                              class="anticon anticon-export"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="export"
                                fill="currentColor"
                                fill-rule="evenodd"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M880 912H144c-17.7 0-32-14.3-32-32V144c0-17.7 14.3-32 32-32h360c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8H184v656h656V520c0-4.4 3.6-8 8-8h56c4.4 0 8 3.6 8 8v360c0 17.7-14.3 32-32 32zM770.87 199.13l-52.2-52.2a8.01 8.01 0 014.7-13.6l179.4-21c5.1-.6 9.5 3.7 8.9 8.9l-21 179.4c-.8 6.6-8.9 9.4-13.6 4.7l-52.4-52.4-256.2 256.2a8.03 8.03 0 01-11.3 0l-42.4-42.4a8.03 8.03 0 010-11.3l256.1-256.3z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            cite
                          </span>
                        </span>
                      </button>
                    </span>
                    <span
                      class="__UserAction__"
                    >
                      <button
                        aria-describedby="test-id"
                        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
                        data-test-id="btn-claiming-login"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="file-done"
                              class="anticon anticon-file-done"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="file-done"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm376 116c-119.3 0-216 96.7-216 216s96.7 216 216 216 216-96.7 216-216-96.7-216-216-216zm107.5 323.5C750.8 868.2 712.6 884 672 884s-78.8-15.8-107.5-44.5C535.8 810.8 520 772.6 520 732s15.8-78.8 44.5-107.5C593.2 595.8 631.4 580 672 580s78.8 15.8 107.5 44.5C808.2 653.2 824 691.4 824 732s-15.8 78.8-44.5 107.5zM761 656h-44.3c-2.6 0-5 1.2-6.5 3.3l-63.5 87.8-23.1-31.9a7.92 7.92 0 00-6.5-3.3H573c-6.5 0-10.3 7.4-6.5 12.7l73.8 102.1c3.2 4.4 9.7 4.4 12.9 0l114.2-158c3.9-5.3.1-12.7-6.4-12.7zM440 852H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            claim
                          </span>
                        </span>
                      </button>
                    </span>
                  </div>
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  >
                    <span
                      class="__UserAction__"
                    >
                      <a
                        data-test-id="reference-search-button"
                        href="/literature?q=citedby:recid:123456"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="file-search"
                              class="anticon anticon-file-search"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="file-search"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            reference search
                          </span>
                        </span>
                      </a>
                    </span>
                    <span
                      class="__UserAction__"
                    >
                      <a
                        href="/literature?q=refersto:recid:123456"
                      >
                        <span
                          class="__IconText__"
                        >
                          <span
                            class="icon"
                          >
                            <span
                              aria-label="login"
                              class="anticon anticon-login"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="login"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <defs>
                                  <style />
                                </defs>
                                <path
                                  d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 01520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 01270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 010 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="v-top"
                          >
                            1 citation
                          </span>
                        </span>
                      </a>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-col-24 mt3 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="__ContentBox__ h-100"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2"
                >
                  <div>
                    <div
                      class="ant-card ant-card-bordered ant-card-small no-border css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-card-head"
                      >
                        <div
                          class="ant-card-head-wrapper"
                        >
                          <div
                            class="ant-card-head-title"
                          >
                            Reference 1 changed to
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-card-body"
                      >
                        <div
                          data-test-id="reference-item"
                        >
                          <li
                            class="ant-list-item"
                          >
                            <div
                              class="ant-row ant-row-start ant-row-middle w-100 flex-nowrap css-dev-only-do-not-override-mncuj7"
                              style="margin-left: -12px; margin-right: -12px;"
                              type="flex"
                            >
                              <div
                                class="ant-col ant-col-xs-2 ant-col-lg-1 css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px;"
                              >
                                <div
                                  class="flex"
                                >
                                  <span>
                                    [1]
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-col css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px; width: 100%;"
                              >
                                <div
                                  class="ant-list-item-meta"
                                >
                                  <div
                                    class="ant-list-item-meta-content"
                                  >
                                    <div
                                      class="ant-list-item-meta-description"
                                    >
                                      <div
                                        class="__InlineList__ di"
                                        data-testid="inline-data-list"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="di"
                                            >
                                              <span>
                                                Author2
                                              </span>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                      <div
                                        class="__InlineList__ secondary-container"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <ul>
                                                <li>
                                                  <span>
                                                    <span>
                                                      <i>
                                                        Journal2
                                                      </i>
                                                    </span>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                             • 
                                          </li>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <span
                                                class=""
                                              >
                                                DOI: 
                                              </span>
                                              <ul>
                                                <li>
                                                  <span>
                                                    <a
                                                      href="//doi.org/123456.12345"
                                                      target="_blank"
                                                    >
                                                      123456.12345
                                                    </a>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col ant-col-24 mt3 css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="__ContentBox__ h-100"
          >
            <div
              class="ant-card ant-card-bordered h-100 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="pa2"
                >
                  <div>
                    <div
                      class="ant-card ant-card-bordered ant-card-small no-border css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-card-head"
                      >
                        <div
                          class="ant-card-head-wrapper"
                        >
                          <div
                            class="ant-card-head-title"
                          >
                            Reference metadata
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-card-body"
                      >
                        <div
                          data-test-id="reference-item"
                        >
                          <li
                            class="ant-list-item"
                          >
                            <div
                              class="ant-row ant-row-start ant-row-middle w-100 flex-nowrap css-dev-only-do-not-override-mncuj7"
                              style="margin-left: -12px; margin-right: -12px;"
                              type="flex"
                            >
                              <div
                                class="ant-col ant-col-xs-2 ant-col-lg-1 css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px;"
                              >
                                <div
                                  class="flex"
                                >
                                  <span>
                                    [1]
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-col css-dev-only-do-not-override-mncuj7"
                                style="padding-left: 12px; padding-right: 12px; width: 100%;"
                              >
                                <div
                                  class="ant-list-item-meta"
                                >
                                  <div
                                    class="ant-list-item-meta-content"
                                  >
                                    <div
                                      class="ant-list-item-meta-description"
                                    >
                                      <div
                                        class="__InlineList__ di"
                                        data-testid="inline-data-list"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="di"
                                            >
                                              <span>
                                                Author2
                                              </span>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                      <div
                                        class="__InlineList__ secondary-container"
                                      >
                                        <ul>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <ul>
                                                <li>
                                                  <span>
                                                    <span>
                                                      <i>
                                                        Journal2
                                                      </i>
                                                    </span>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                             • 
                                          </li>
                                          <li>
                                            <div
                                              class="__InlineList__"
                                              data-testid="inline-data-list"
                                            >
                                              <span
                                                class=""
                                              >
                                                DOI: 
                                              </span>
                                              <ul>
                                                <li>
                                                  <span>
                                                    <a
                                                      href="//doi.org/123456.12345"
                                                      target="_blank"
                                                    >
                                                      123456.12345
                                                    </a>
                                                  </span>
                                                </li>
                                              </ul>
                                            </div>
                                          </li>
                                        </ul>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-card ant-card-bordered ant-card-small no-border css-dev-only-do-not-override-mncuj7"
                    >
                      <div
                        class="ant-card-body"
                      >
                        <p
                          class="b mb0 mt4"
                        >
                          3) New
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row ant-row-space-between actions ph2 css-dev-only-do-not-override-mncuj7"
                >
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                  <div
                    class="ant-col css-dev-only-do-not-override-mncuj7"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
